--- a/wiki/LinuxCompiling.wiki
+++ b/wiki/LinuxCompiling.wiki
@@ -5,26 +5,32 @@
 = Preparation =
 
 This page documents the effort to compile and run the simulator on a typical Ubuntu Linux box. It is an effort to help other people doing the same and a way to find problems in the building/process.
-Preparation
 
-  # Be sure to have the latest versions of autoconf and automake. Some distributions might maintain many versions simultaneously, get rid of the older versions. For some reason (which doesn't seem to be faulted on the simulator) libtool cannot be installed.
-  # The current boinc version in ubuntu doesnt support graphics, as such a more moder version is needed (compilation and installation)
-    # Install freeglut3-dev
-    # Be sure to at least have removed boinc-dev (and probably boinc-client). No ohter boinc should be running, or you will be inviting trouble.
-    # *svn co `http://boinc.berkeley.edu/svn/branches/server_stable` boinc*
-    # Follow the INSTALL file. Note the installation directory (the --prefix paramater to configure).
-    # You will need to move the installed directory to the simulator trunk. You can also set BOINCDIR (which is probably prefarable, anyway) 
+ # Checkout from Subversion: (see [http://code.google.com/p/openmalaria/source/checkout here])
+ # Install BOINC into the openmalaria trunk folder:
+  `svn co http://boinc.berkeley.edu/svn/branches/server_stable boinc`
+  * The current BOINC version in ubuntu doesnt support graphics, as such a more moder version is needed (compilation and installation)
+  * Be sure to at least have removed boinc-dev (and probably boinc-client). No other boinc should be running, or you will be inviting trouble.
+  * You will need to move the installed directory to the simulator trunk. You can also set BOINCDIR (which is probably prefarable, anyway) 
+ # Install freeglut3-dev
+ # Follow the INSTALL file. Note the installation directory (the --prefix paramater to configure).
 
 = The actual building =
 
-  # Checkout from Subversion: (see [http://code.google.com/p/openmalaria/source/checkout here])
-  # put boinc inside the trunk directory.
-  # Compile. Potentially run `./autogen.sh` before configure if any of the Makefile.am files have been updated.
+Compile. Potentially run `./autogen.sh` before configure if any of the Makefile.am files have been updated.
+
 {{{
 ./configure
 make -j 2 test
 }}}
 
+= Problem solving =
+
+== autoconf & automake ==
+
+Be sure to have the latest versions of autoconf and automake. Some distributions might maintain many versions simultaneously, get rid of the older versions. For some reason (which doesn't seem to be faulted on the simulator) libtool cannot be installed.
+
+== Removing all local changes ==
 
 If the installation gets too much garbage and you cannot compile for some reason, you might do this on the trunk:
 
