Removed the GPL v3 licence (which shouldn't have been there). Avoided throwing in drug.cpp. doCM seems to work fine now.
git-svn-id: https://openmalaria.googlecode.com/svn@33 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/INSTALL
+++ b/trunk/INSTALL
@@ -1,3 +1,12 @@
+What follows are generic configure/make instructions.
+'make install' probably doesn't work.
+The file README gives much more specific and likely useful
+instructions.
+
+
+
+
+
 Installation Instructions
 *************************
 
