--- a/wiki/LinuxCompiling.wiki
+++ b/wiki/LinuxCompiling.wiki
@@ -7,20 +7,26 @@
 This page documents the effort to compile and run the simulator on a typical Ubuntu Linux box. It is an effort to help other people doing the same and a way to find problems in the building/process.
 
  # Checkout from Subversion: (see [http://code.google.com/p/openmalaria/source/checkout here])
- # Install BOINC into the openmalaria trunk folder:
+ # Optionally, install BOINC into the openmalaria trunk folder:
   `svn co http://boinc.berkeley.edu/svn/branches/server_stable boinc`
   * The current BOINC version in ubuntu doesnt support graphics, as such a more moder version is needed (compilation and installation)
   * Be sure to at least have removed boinc-dev (and probably boinc-client). No other boinc should be running, or you will be inviting trouble.
   * You will need to move the installed directory to the simulator trunk. You can also set BOINCDIR (which is probably prefarable, anyway) 
- # Install freeglut3-dev
+ # Install code synthesis' xsd and xerces-c: {{{ apt-get install xsdcxx libxerces-c2-dev }}}
+ # For the separate graphics app, install freeglut3-dev
  # Follow the INSTALL file. Note the installation directory (the --prefix paramater to configure).
 
 = The actual building =
 
-Compile. Potentially run `./autogen.sh` before configure if any of the Makefile.am files have been updated.
+Compile. Potentially run `./autogen.sh` before configure if any of the Makefile.am files have been updated. The most useful configure options:
+ * --prefix path
+  * E.g. {{{--prefix /usr/local}}} to install in /usr/local
+ * --enable-deploy
+  * Enables BOINC integration (required for running BOINC workunits)
+  * Statically links the executables
 
 {{{
-./configure
+./configure [options]
 make -j 2 test
 }}}
 
