Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@320 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/LinuxCompiling.wiki
+++ b/wiki/LinuxCompiling.wiki
@@ -1,6 +1,7 @@
 #summary Compiling on Linux.
 #labels Phase-Implementation,linux,installation
 
+= More recent documentation is [UnixBuildOpenMalaria here]. =
 
 = Preparation =
 
