Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@322 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/UnixBuildBoinc.wiki
+++ b/wiki/UnixBuildBoinc.wiki
@@ -1,4 +1,4 @@
-#Installing boinc development files to allow compiling openmalaria
+#summary Installing boinc development files to allow compiling openmalaria
 
 = Introduction =
 
