--- a/wiki/UnixBuildWindows.wiki
+++ b/wiki/UnixBuildWindows.wiki
@@ -30,7 +30,42 @@ Obviously you can't use linux libraries here.. I'm not entirely clear whether MS
   zlib-1.2.3/
   }}}
 
+== zlib ==
+
+Grab and extract the sources.
+{{{
+cd zlib-1.2.3
+CC=/usr/bin/i586-mingw32msvc-cc AR="/usr/bin/i586-mingw32msvc-ar rc" RANLIB=/usr/bin/i586-mingw32msvc-ranlib ./configure --prefix=/home/USERNAME/i586-mingw32msvc
+make test
+make install
+}}}
+That may be enough, or you may need to copy the library to openmalaria/lib.
+
+== xerces-c ==
+
+(ver 2.8; probably 3.0 should work too.) Extract the sources, then:
+{{{
+cd xerces-c-src_2_8_0
+export XERCESCROOT=`pwd`
+cd src/xercesc
+./runConfigure -p mingw-msys -C --prefix -C /home/cyborg/STI/i586-mingw32msvc/local -C --host=i586-mingw32msvc -s
+}}}
+You should edit Makefile.incl and substitute 'dllwrap' by 'i586-mingw32msvc-dllwrap'. 
+{{{
+make
+make install
+}}}
+(Instructions ripped from the [http://clam-project.org/wiki/Devel/Windows_MinGW_cross_compile#Xerces-C clam wiki].)
+
+== XSD ==
+
+The nice thing is you don't have to compile this. 
+ * make sure you can execute xsd (just install xsdcxx since you want a _linux_ binary to run at _compile_ time).
+ * make the headers available (e.g. make /usr/i586-mingw32msvc/include/xsd a sym-link to /usr/include/xsd)
+
 == Compiling openmalaria ==
+
+You should now have libraries for the above available in /home/USERNAME/i586-mingw32msvc/lib and headers in /home/USERNAME/i586-mingw32msvc/include (or something similar).
 
 Create a Toolchain file, to tell cmake about the platform we're cross-compiling for (see [http://www.cmake.org/Wiki/CmakeMingw here] for more info). Mine looks like:
 {{{
@@ -53,5 +88,7 @@ set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
 }}}
 
 Create the openmalaria-build folder somewhere, run cmake-gui and set the source and build dirs, tell it to configure and (being a new build folder) it'll ask for setup details. You can then tell it to cross-compile with the above tool-chain file. Check the lib and include paths are OK; if not it's easiest to set them manually. Then configure & generate.
+
+You might have to temporarily copy the openmalaria-build/xsdcxx/scenario.?xx from somewhere else; there shouldn't be any problem building them but I had a configure/generate problem with cmake without these.
 
 Now compile with make. That should be it if everything's ready... I still get link errors.
