--- a/wiki/UnixBuildWindows.wiki
+++ b/wiki/UnixBuildWindows.wiki
@@ -63,6 +63,16 @@ The nice thing is you don't have to compile this.
  * make sure you can execute xsd (just install xsdcxx since you want a _linux_ binary to run at _compile_ time).
  * make the headers available (e.g. make /usr/i586-mingw32msvc/include/xsd a sym-link to /usr/include/xsd)
 
+== GSL ==
+
+After extracing sources,
+{{{
+cd gsl-1.12
+CC=/usr/bin/i586-mingw32msvc-cc AR="/usr/bin/i586-mingw32msvc-ar" RANLIB=/usr/bin/i586-mingw32msvc-ranlib ./configure --enable-static=yes --enable-shared=no --prefix=/home/cyborg/STI/i586-mingw32msvc/ --build=mingw32
+make -j 2
+make install
+}}}
+
 == Compiling openmalaria ==
 
 You should now have libraries for the above available in /home/USERNAME/i586-mingw32msvc/lib and headers in /home/USERNAME/i586-mingw32msvc/include (or something similar).
