Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@341 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/UnixBuildOpenMalaria.wiki
+++ b/wiki/UnixBuildOpenMalaria.wiki
@@ -10,6 +10,7 @@ cd ~
 mkdir malariacontrol
 cd malariacontrol
 }}}
+You can also create a malariacontrol/lib dir and put dependency libraries there. But I recommend you install them (make install) in which case you won't need to do this.
 
 == Dependencies ==
 
