--- a/wiki/WindowsBuildOpenMalaria.wiki
+++ b/wiki/WindowsBuildOpenMalaria.wiki
@@ -8,6 +8,7 @@ Create a working directory. Checkout openmalaria into a sub-folder (see the [htt
 
 Openmalaria requires the following; for many just run the installer:
  * gsl - get from [ftp://sunsite.cnlab-switch.ch/mirror/gnu/gsl here] (oldest supported is 1.11); extract to your working directory above the openmalaria code and rename to "gsl". Hopefully something like this works.
+  * You then need to compile the libraries or get them from somewhere... TODO
  * XSD - run the .msi installer from [http://codesynthesis.com/products/xsd/download.xhtml here].
  * Xerces-C - versions 2.8 or 3.0 should work; 3.0 is included with the XSD installer for windows
  * zlib - get the DLL download from [www.zlib.net here], extract to the working directory above the openmalaria sources and rename to "zlib".
