--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,3 +1,12 @@
 #summary Content of wiki
 
 DrugActionIntegration
+EndUserHelp
+HtmlDocumentation
+LinuxCompiling
+TableOfContents
+UnixBuildBoinc
+UnixBuildOpenMalaria
+UnixBuildWindows
+UnixBuildXercesC
+WindowsBuildOpenMalaria
