Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@395 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,12 +1,21 @@
 #summary Content of wiki
 
-DrugActionIntegration
-EndUserHelp
-HtmlDocumentation
-LinuxCompiling
-TableOfContents
-UnixBuildBoinc
-UnixBuildOpenMalaria
-UnixBuildWindows
-UnixBuildXercesC
-WindowsBuildOpenMalaria
+  * DrugActionIntegration
+
+  * EndUserHelp
+
+  * HtmlDocumentation
+
+  * LinuxCompiling
+
+  * TableOfContents
+
+  * UnixBuildBoinc
+
+  * UnixBuildOpenMalaria
+
+  * UnixBuildWindows
+
+  * UnixBuildXercesC
+
+  * WindowsBuildOpenMalaria
