--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,21 +1,14 @@
 #summary Content of wiki
 
-  * DrugActionIntegration
+== Building Open Malaria ==
+ * [UnixBuildOpenMalaria On Unix]
+ * [WindowsBuildOpenMalaria On Windows]
 
+Additionally, there's a [UnixBuildWindows summary] of how I tried (and failed) to cross-compile Windows binaries from linux, and some old documentation of how to [LinuxCompiling build openmalaria on linux].
+
+== Further documentation / help ==
+  * [HtmlDocumentation doxygen-generated documentation of the code]
+  * DrugActionIntegration
   * EndUserHelp
 
-  * HtmlDocumentation
-
-  * LinuxCompiling
-
-  * TableOfContents
-
-  * UnixBuildBoinc
-
-  * UnixBuildOpenMalaria
-
-  * UnixBuildWindows
-
-  * UnixBuildXercesC
-
-  * WindowsBuildOpenMalaria
+  * [TableOfContents This page]
