Note about yaml-cpp
git-svn-id: https://openmalaria.googlecode.com/svn@429 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -6,6 +6,8 @@
 
 Additionally, there's a [UnixBuildWindows summary] of how I tried (and failed) to cross-compile Windows binaries from linux, and some old documentation of how to [LinuxCompiling build openmalaria on linux].
 
+*Note:* The unittests have a dependency on [http://code.google.com/p/yaml-cpp/ yaml-cpp]. If you *disable OM_CXXTEST_ENABLE* (a CMake option), you won't need to install yaml-cpp.
+
 == Further documentation / help ==
   * [HtmlDocumentation doxygen-generated documentation of the code]
   * DrugActionIntegration
