--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -3,6 +3,7 @@
 == Building Open Malaria ==
  * [UnixBuildOpenMalaria On Unix]
  * [WindowsBuildOpenMalaria On Windows]
+ * [MacBuildOpenMalaria On Mac] (addition to unix instructions)
 
 Additionally, there's a [UnixBuildWindows summary] of how I tried (and failed) to cross-compile Windows binaries from linux, and some old documentation of how to [LinuxCompiling build openmalaria on linux].
 
