Another BOINC troubleshooting
git-svn-id: https://openmalaria.googlecode.com/svn@645 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/WindowsBuildOpenMalaria.wiki
+++ b/wiki/WindowsBuildOpenMalaria.wiki
@@ -66,3 +66,7 @@ If you want to run individual simulations using your own scenario.xml file then 
 == '_read_ : is not a member of 'std::basic_istream<_Elem,_Traits>' ==
 
 Update BOINC (this is caused by a wierd macro in BOINC).
+
+== openssl dependency ==
+
+Checkout http://boinc.berkeley.edu/svn/trunk/boinc_depends_win_vs2005 into the same directory as boinc is in.
