--- a/wiki/WindowsBuildOpenMalaria.wiki
+++ b/wiki/WindowsBuildOpenMalaria.wiki
@@ -11,7 +11,7 @@ Openmalaria requires the following; for many just run the installer:
   * Visual Studio (only VS 2005 (version 8.0) tested; older compilers I expect won't work)
   * Code::Blocks, along with some compiler (recommended:  [http://www.codeblocks.org/downloads/5#windows install the version with mingw]) (not actually tested, but should work)
   * GNU make along with some compiler (probably not so easy to set up)
- * gsl - get from [ftp://sunsite.cnlab-switch.ch/mirror/gnu/gsl here] (oldest supported is 1.11); extract to your working directory above the openmalaria code and rename to "gsl". Hopefully something like this works.
+ * gsl (see below)
   * You then need to compile the libraries or get them from somewhere... TODO
  * XSD - run the .msi installer from [http://codesynthesis.com/products/xsd/download.xhtml here]. If you already have an old version, delete scenario.cxx, scenario.hxx and scenario.ixx.
  * Xerces-C - versions 2.8 or 3.0 should work; 3.0 is included with the XSD installer for windows. Here we assume you have installed Xerces along with XSD (the default option when installing XSD. Find the xerces-all.sln file in you Xerces install directory (the default location will be something like C:\Program Files\CodeSynthesis XSD 3.2\xerces-c-3.0.1\projects\Win32\VC8\xerces-all for the VS version 8 solution file), and open it with VS. Choose the "Release" build configuration. Build the XercesLib build target. This will create a file C:\Program Files\CodeSynthesis XSD 3.2\xerces-c-3.0.1\Build\Win32\VC8\Static Release\xerces-c_3.lib (Optional: Build using the "Static Release" target to creat a xerces-c_static_3.lib library, then follow the instructions below to create openMalaria with Xerces statically linked).
@@ -23,6 +23,14 @@ Openmalaria requires the following; for many just run the installer:
   * I don't know which is the oldest compatible version; I know 1.41.0 works. Newer versions will need to have their version number added in openmalaria/CMakeLists.txt (search for Boost_ADDITIONAL_VERSIONS).
 
 NB: The unit tests have a dependency on yaml-cpp (for reading in data for the vector tests). If you disable OM_CXXTEST_ENABLE (a CMake option), you won't need to install yaml-cpp.
+
+=== gsl ===
+
+Get it from [ftp://sunsite.cnlab-switch.ch/mirror/gnu/gsl here] (oldest supported is 1.11); extract to your working directory above the openmalaria code and rename to "gsl". This should put the sources within WORKSPACE/gsl/gsl/.
+
+Now build the libraries: open the gsl/gsl/gsl.sln file select the "Release MT"/"Debug MT" version you want to use (you'll have to stick with one), and build. Now find the libraries: they should be under gsl/gsl/win32/lib/. Copy/move the lib folder up two directories (so you have WORKSPACE/gsl/lib), go into it and rename the files: remove the "_mt" (release) or "_mtd" (debug) suffix (so you have gs.lib, cblas.lib, etc.). (If you want to change between debug and release later, replace this set of files with the other generated version.)
+
+That should be it. It's a pain, yes, but (a) pre-built libraries are likely to cause you problems and (b) it's better to explicitly choose to use the release or debug libraries since libraries generated in release mode and ones generated in debug mode aren't necessarily compatible with one another (with MSVC).
 
 = Build =
 
