Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@726 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/HtmlDocumentation.wiki
+++ b/wiki/HtmlDocumentation.wiki
@@ -1,5 +1,7 @@
+#summary Doxygen documentation
+
 = Documentation =
 
-openMalaria sources are documented using Doxygen-style comments. For convenience, we provide an up-to-date version of the generated Html at the following location:
+The OpenMalaria code is, to a large extent, documented with Doxygen-style comments. The html documentation generated daily from the latest code committed here can be found below:
 
-[http://www.malariacontrol.net/openmalaria/html/ http://www.malariacontrol.net/openmalaria/html/] 
+http://www.malariacontrol.net/openmalaria/html/
