--- a/wiki/UnixBuildOpenMalaria.wiki
+++ b/wiki/UnixBuildOpenMalaria.wiki
@@ -63,13 +63,29 @@ There are some other build files included:
 
 == Running the included tests ==
 
-Currently these aren't properly integrated into the cmake build system. Copy the built openMalaria binary to the source folder, then run the runTests.sh script:
-{{{
-cp openMalaria ..
-# note: older versions of cmake may put this in the build/model folder, instead of the build folder
-cd ..
-./runTests.sh --checkpoint 1 2 3 4 5 6 9 11 12 IPT
-./runTests.sh DummyPKPD CevCq # checkpointing is broken on these tests
+From the build directory, run ctest:
+{{{$ ctest
+Start processing tests
+Test project /home/gouigoui/workspace/OpenMalaria_readOnly/build
+  1/ 13 Testing 1                                Passed
+  2/ 13 Testing 2                                Passed
+  3/ 13 Testing 3                                Passed
+  4/ 13 Testing 4                                Passed
+  5/ 13 Testing 5                                Passed
+  6/ 13 Testing 6                                Passed
+  7/ 13 Testing 9                                Passed
+  8/ 13 Testing 11                               Passed
+  9/ 13 Testing 12                               Passed
+ 10/ 13 Testing IPT                              Passed
+ 11/ 13 Testing VecTest                          Passed
+ 12/ 13 Testing VecFullTest                      Passed
+ 13/ 13 Testing unittest                         Passed
+100% tests passed, 0 tests failed out of 13
 }}}
 
-Most of the tests should pass (unless you managed to get a commit I completely messed up). If some fail, it's most likely my fault, not yours; I've adjusted the above line to only run tests which should work. The Vector test is a work-in-progress and has never yet been expected to pass.
+Alternately, you can use the test/run.sh script directly:
+{{{
+# (from build folder)
+test/run.sh 1 2 3
+test/run.sh VecTest -- --checkpoint
+}}}
