Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@753 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/UnixBuildOpenMalaria.wiki
+++ b/wiki/UnixBuildOpenMalaria.wiki
@@ -64,7 +64,8 @@ There are some other build files included:
 == Running the included tests ==
 
 From the build directory, run ctest:
-{{{$ ctest
+{{{
+$ ctest
 Start processing tests
 Test project /home/gouigoui/workspace/OpenMalaria_readOnly/build
   1/ 13 Testing 1                                Passed
